Fix tiles on small screens in Safari

--- a/src/theme/default/theme.css
+++ b/src/theme/default/theme.css
@@ -295,7 +295,7 @@ main {
 }
 
 .tile {
-  @apply h-full rounded-lg shadow-md hover:shadow-lg overflow-hidden flex flex-col transition-shadow duration-200;
+  @apply rounded-lg shadow-md hover:shadow-lg overflow-hidden flex flex-col transition-shadow duration-200;
   background-color: var(--tile-bg-color);
 }
 
